# TrongkAI

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  INDEX.md  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
apps/engine/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
apps/engine/tests/: test_agenda.py  test_alertas.py  test_audit_trail.py  test_auth.py  test_bottleneck.py  test_breakeven.py  test_cache.py  test_carbon_footprint.py  test_climate_risk.py  test_compliance_rep.py  test_config.py  test_data_room.py  test_decision_engine.py  test_depreciation.py  test_escenarios.py  test_excel_export.py  test_financial.py  test_financing.py  test_intelligence_graph.py  test_learning_curve.py  test_lp_pack.py  test_macro_chile.py  test_main_endpoints.py  test_mass_balance.py  test_matriz_coherence.py  test_monte_carlo.py  test_notas.py  test_pipeline_lp.py  test_plan_builder.py  test_readiness_history.py  test_readiness_score.py  test_repository.py  test_roadmap.py  test_scenario_comparator.py  test_seed.py  test_sensitivity.py  test_sensitivity_3d.py  test_slb.py  test_snapshot_diff.py  test_system_health.py  (+6 more)
apps/engine/trongkai_engine/: __init__.py  agenda.py  alertas.py  audit_trail.py  bottleneck.py  breakeven.py  cache.py  carbon_footprint.py  climate_risk.py  compliance_rep.py  config.py  data_room.py  decision_engine.py  depreciation.py  escenarios.py  excel_export.py  financial.py  financing.py  intelligence_graph.py  learning_curve.py  lp_pack.py  macro_chile.py  main.py  mass_balance.py  matriz_coherence.py  notas.py  (+18 more)
(+113 files in other folders)
