[project]
name = "trongkai-engine"
version = "0.0.1"
description = "Motor de cálculo de Trongkai: balance de masa, cuello de botella, flujo de caja a 5 años"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.30",
    "structlog>=24.4.0",
    "redis>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
